...
            }
        }
        .navigationTitle("GitHub Users")
        // searchCompletion of previous searches could be nice
        .searchable(text: $searchText,
                    placement: .navigationBarDrawer(displayMode: .always),
                    prompt: "Search users...")
        .onSubmit(of: .search) {
            Task {
                await viewModel.searchUsers(query: searchText)
            }
        }
        .onChange(of: searchText) { _, newValue in
...
